# pypops

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Pipfile  README.md  setup.py
.github/workflows/: black.yml  clang-format.yml  cpp.yml  pythonpackage.yml
include/: helpers.hpp  raster.hpp
pypops/: simulation.py
src/: pypops.cpp
tests/: CMakeLists.txt  pytest.ini  test_config.py  test_new_and_modify_array.py  test_new_and_modify_matrix.py  test_pypops.py  test_rasterio.py  test_simulation_function.py  test_simulation_function_principles.py  test_simulation_pops.py  test_type_compatibility.py
tests/data/: simple_config.json
tests/data/sod/: config.json  config.yaml
